Center artist photo and add correct z-index

--- a/app/assets/stylesheets/artist_show.scss
+++ b/app/assets/stylesheets/artist_show.scss
@@ -1,8 +1,17 @@
+.artist-show-header-container {
+    width: 100%;
+}
+
 #artist-show-photo {
     position: absolute;
-    width: 80%;
-    height: 30%;
-    align-items: center;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 37%;
+    background-size: cover;
+    background-position: 100% 35%;
+    background-repeat: no-repeat;
 }
 
 .artist-show-name {
@@ -12,6 +21,7 @@
     letter-spacing: -.005em;
     color: #fff;
     text-align: center;
+    position: relative;
 }
 
 .artist-show-bio-header {
