--- a/app/assets/stylesheets/player.css
+++ b/app/assets/stylesheets/player.css
@@ -29,7 +29,8 @@ body {
     flex-direction: column;
     padding-top: 24px;
     min-width: 228px;
-    /* position: fixed; */
+    position: fixed;
+    z-index: 2;
     height: 100%;
 }
 
@@ -37,7 +38,8 @@ body {
     grid-area: player;
     background-color: #282828;
     /* position:relative; */
-    /* position: fixed; */
+    position: fixed;
+    z-index: 2;
     bottom: 0;
     width: 100%;
 }
